--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <application
+            android:name="com.example.task.Stetho.SubApplication"
             android:allowBackup="true"
             android:icon="@mipmap/logo_launcher"
             android:label="@string/app_name"
@@ -14,7 +16,7 @@
             android:usesCleartextTraffic="true"
             android:theme="@style/SplashTheme">
 
-        <activity android:name=".SplashActivity"
+        <activity android:name=".Splash.SplashActivity"
                   android:theme="@style/SplashTheme"
                   android:noHistory="true">
             <intent-filter>
@@ -26,6 +28,11 @@
 
         <activity android:name=".MainActivity"
                   android:launchMode="singleTop"/>
+
+        <activity android:name=".CreateCity"
+                  android:parentActivityName=".MainActivity"/>
+        <activity android:name=".WeatherDetails"
+                  android:parentActivityName=".CreateCity"/>
     </application>
 
 </manifest>
