--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,11 @@ dependencies {
     //Stetho components
     implementation 'com.facebook.stetho:stetho:1.5.0'
 
+    //picasso-transformations
+    implementation 'jp.wasabeef:picasso-transformations:2.2.1'
+    // If you want to use the GPU Filters
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    //Location manager
+    implementation "com.google.android.gms:play-services-location:16.0.0"
+
 }
