--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,12 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+
+
+
     <application
             android:name="com.example.task.Stetho.SubApplication"
             android:allowBackup="true"
@@ -33,6 +37,7 @@
                   android:parentActivityName=".MainActivity"/>
         <activity android:name=".WeatherDetails"
                   android:parentActivityName=".CreateCity"/>
+        <activity android:name=".CurrentActivity"/>
     </application>
 
 </manifest>
