--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@
 buildscript {
     ext {
         kotlin_version = '1.3.21'
-        roomVersion = '1.1.1'
+        roomVersion = '2.0.0-beta01'
+        lottieVersion = '3.0.0'
     }
     repositories {
         google()
